@@ -13,7 +13,7 @@ use constant base_ore_cost          => 14200;
 use constant base_time_cost         => 60 * 60 * 4;
 use constant base_waste_cost        => 4200;
 use constant base_combat            => 5000;
-use constant base_speed             => 2000;
+use constant base_speed             => 2500;
 use constant pilotable              => 1;
 use constant build_tags             => ['War'];
 
