@@ -13,7 +13,7 @@ use constant base_ore_cost          => 75000;
 use constant base_time_cost         => 60 * 60 * 7;
 use constant base_waste_cost        => 20000;
 use constant base_combat            => 6200;
-use constant base_speed             => 2600;
+use constant base_speed             => 2200;
 use constant base_stealth           => 2800;
 use constant pilotable              => 1;
 use constant build_tags             => ['War'];
